WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117158
[BlackBerry] Selection handles are not cleared when displaying error pages.
https://bugs.webkit.org/show_bug.cgi?id=117158
Summary
[BlackBerry] Selection handles are not cleared when displaying error pages.
Mike Fenton
Reported
2013-06-03 09:32:44 PDT
SSIA.
Attachments
Patch
(2.66 KB, patch)
2013-06-03 09:39 PDT
,
Mike Fenton
cgarcia
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
Updated patch directly cancelling the visuals.
(2.66 KB, patch)
2013-06-03 10:11 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
Actual updated patch.
(2.65 KB, patch)
2013-06-03 10:14 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2013-06-03 09:39:23 PDT
Created
attachment 203604
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-03 09:43:15 PDT
Attachment 203604
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp']" exit_code: 1 Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:746: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:747: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3
2013-06-03 10:04:59 PDT
Comment on
attachment 203604
[details]
Patch Looks good to me, but please, fix style issues before landing.
Mike Fenton
Comment 4
2013-06-03 10:11:42 PDT
Created
attachment 203610
[details]
Updated patch directly cancelling the visuals.
WebKit Commit Bot
Comment 5
2013-06-03 10:12:22 PDT
Attachment 203610
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp']" exit_code: 1 Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:746: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:747: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mike Fenton
Comment 6
2013-06-03 10:14:51 PDT
Created
attachment 203612
[details]
Actual updated patch.
WebKit Commit Bot
Comment 7
2013-06-03 10:57:18 PDT
Comment on
attachment 203612
[details]
Actual updated patch. Clearing flags on attachment: 203612 Committed
r151118
: <
http://trac.webkit.org/changeset/151118
>
WebKit Commit Bot
Comment 8
2013-06-03 10:57:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug