[BlackBerry] Selection handles are not cleared when displaying error pages. https://bugs.webkit.org/show_bug.cgi?id=117158

Reviewed by Carlos Garcia Campos.

PR 342159.

Add explicit cancel of selection state when loading an error page
as it is not always cleared.

Internally Reviewed by Nima Ghanavatian.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDidFailProvisionalLoad):


Canonical link: https://commits.webkit.org/135413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151118 268f45cc-cd09-0410-ab3c-d52691b4dbfc